# py-fastapi-homework-1-task

./: pyproject.toml
src/routes/: movies.py
src/schemas/: movies.py
