[project]
name = "movie-theater-api"
version = "0.1.0"
description = "Mate task for first lesson"
requires-python = ">=3.13"
authors = [
    { name = "Yurii Okal", email = "yurii.okal@mate.com" }
]

dependencies = [
    "fastapi>=0.115.6",
    "sqlalchemy>=2.0.36",
    "pytest>=8.3.4",
    "pydantic-settings>=2.7.0",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "httpx>=0.28.1",
    "pytest-env>=1.1.5",
    "flake8>=7.1.1",
    "aiosqlite>=0.21.0",
    "pytest-asyncio>=0.25.3",
    "uv-build>=0.8.18,<0.9.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
